--- a/gracie.html
+++ b/gracie.html
@@ -3,4 +3,5 @@
 <p>My name is Grace, I am an exceptional young lady</p>
 <p>Lately i have been going through some mental stress because i feel like i have not achieved enough right now</p>
 <img src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
+<p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test">The link to my github page</a></p>
 </main>
