--- a/gracie.html
+++ b/gracie.html
@@ -4,4 +4,11 @@
 <p>Lately i have been going through some mental stress because i feel like i have not achieved enough right now</p>
 <img src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
 <p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test">The link to my github page</a></p>
+<p>Some of the things I love to do include but not limited to:</p>
+<p><ul>
+    <li>Reading</li>
+    <li>Singing</li>
+    <li>Sleeping</li>
+</ul></p>
+<p>My favourite food <input type="text" required placeholder="Yam and Egg"></p>
 </main>
