--- a/gracie.html
+++ b/gracie.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>My First Project</title>
+</head>
+<body>
 <main>
 <h1>Hello World</h1>
 <p>My name is Grace, I am an exceptional young lady</p>
@@ -5,10 +11,35 @@
 <img src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
 <p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test">The link to my github page</a></p>
 <p>Some of the things I love to do include but not limited to:</p>
+<div>
 <p><ul>
     <li>Reading</li>
     <li>Singing</li>
     <li>Sleeping</li>
 </ul></p>
-<p>My favourite food <input type="text" required placeholder="Yam and Egg"></p>
+</div>
+<p>My favourite food 
+    <input type="text" required placeholder="Yam and Egg">
+</p>
+<p>Which do you thin I like the most
+    <label for="Singing">
+        <input id="Singing" value="Singing" type="radio" name="Singing-Listening to music">Singing
+    </label>
+    <label for="Listening to music">
+        <input id="Listening to music" value="Listening to music" type="radio" name="Singing-Listening to music">Listening to music
+    </label>
+</p>
+<p>which do you think I am
+    <label for="Loving">
+        <input id="Loving" value="Loving" type="checkbox" name="Personality">Loving
+    </label>
+    <label for="Gracious">
+        <input id="Gracious" value="Gracious" type="checkbox" name="Personality">Gracious
+    </label>
+    <label for="Elegant">
+        <input id="Elegant" value="Elegant" type="checkbox" name="Personality">Elegant
+    </label>
+</p>
 </main>
+</body>
+</html>
