--- a/gracie.html
+++ b/gracie.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <main>
-<h1>Hello World</h1>
+<h1 style="color: red;">Hello World</h1>
 <p>My name is Grace, I am an exceptional young lady</p>
 <p>Lately i have been going through some mental stress because i feel like i have not achieved enough right now</p>
 <img src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
@@ -26,7 +26,7 @@
         <input id="Singing" value="Singing" type="radio" name="Singing-Listening to music">Singing
     </label>
     <label for="Listening to music">
-        <input id="Listening to music" value="Listening to music" type="radio" name="Singing-Listening to music">Listening to music
+        <input id="Listening to music" value="Listening to music" type="radio" name="Singing-Listening to music" checked>Listening to music
     </label>
 </p>
 <p>which do you think I am
@@ -34,7 +34,7 @@
         <input id="Loving" value="Loving" type="checkbox" name="Personality">Loving
     </label>
     <label for="Gracious">
-        <input id="Gracious" value="Gracious" type="checkbox" name="Personality">Gracious
+        <input id="Gracious" value="Gracious" type="checkbox" name="Personality" checked>Gracious
     </label>
     <label for="Elegant">
         <input id="Elegant" value="Elegant" type="checkbox" name="Personality">Elegant
