--- a/gracie.html
+++ b/gracie.html
@@ -3,19 +3,26 @@
 <head>
 <title>My First Project</title>
 </head>
-<body>
+<body style="background-color: yellow;">
+    <style>
+        body {background-color: ivory!important;}
+        h1 {color: red;font-family: Georgia; font-size: 40px;}  
+        .green-text {color: green;}
+        p {font-size: 20px;}
+        .larger-image {width: 500px;}
+    </style>
 <main>
-<h1 style="color: red;">Hello World</h1>
+<h1>Hello World</h1>
 <p>My name is Grace, I am an exceptional young lady</p>
 <p>Lately i have been going through some mental stress because i feel like i have not achieved enough right now</p>
-<img src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
+<img class="larger-image" src="https://bit.ly/3zGykFW" alt="A Nigerian Girl">
 <p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test">The link to my github page</a></p>
 <p>Some of the things I love to do include but not limited to:</p>
 <div>
 <p><ul>
-    <li>Reading</li>
-    <li>Singing</li>
-    <li>Sleeping</li>
+    <li class="green-text">Reading</li>
+    <li class="green-text">Singing</li>
+    <li class="green-text">Sleeping</li>
 </ul></p>
 </div>
 <p>My favourite food 
