--- a/gracie.html
+++ b/gracie.html
@@ -7,20 +7,23 @@
     <link href="https://fonts.google.com/specimen/Allison" rel="stylesheet" type="text/css">
     <style>
         body {background-color: ivory!important;font-family: monospace;}
-        h1 {color: hotpink; font-family: Allison; font-size: 68px;background-color: rgba(45, 45, 45, 0.1);}  
+        h1 {color: hotpink; font-family: Allison; font-size: 68px;background-color: rgba(45, 45, 45, 0.1);text-transform: uppercase;font-weight: 900; position: relative; top: 20px;}  
         .green-text {color: green;}
-        p {font-size: 20px;text-align: center;}
+        p {font-size: 20px;text-align: center;font-weight: 800;line-height: 30px;}
         .larger-image {width: 200px;} 
         .thin-yellow-border{border-color: yellow; border-width: 5px;border-style: solid;border-radius: 10px;}
         #thin-red-border{border-color: red;border-width: 10px;border-style: solid;border-radius: 15px;}
         #green-background {background-color: green; padding-left: 10px;padding-right: 5px;padding-top: 15px;padding-bottom: 20px; margin: 5px;}
+        #thumbnail {box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);}
+        .links{color: lightcoral;opacity: 1;}
+        a:hover{color: deepskyblue;}
     </style>
 <main>
-<h1><hr> Hello World <hr></h1>
-<p>My name is <u>Grace</u>, I am an exceptional young lady</p>
+<h1 id="thumbnail"><hr> Hello World <hr></h1>
+<p>My name is <strong><u>Grace Amarachi Onyeabor</u></strong>, I am an exceptional young lady</p>
 <p><em> Lately I have been going through some mental stress because I feel like I have not achieved enough right now</em></p>
-<p><img id="thin-red-border" class="larger-image thin-yellow-border" src="https://bit.ly/3zGykFW" alt="A Nigerian Girl"></p>
-<p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test">The link to my github page</a></p>
+<p><img id="thin-red-border" class="larger-image thin-yellow-border" src="images/gracie2.JPG" alt="my picture"></p>
+<p>Here is <a target = "_blank" href="https://github.com/gracie1093/git_test" class="links"><em><u>The link to my github page</u></em></a></p>
 <p>Some of the things I love to do include but not limited to:</p>
 <div class="thin-yellow-border" id="green-background">
 <p><strong><ul>
@@ -32,7 +35,7 @@
 <p>My favourite food 
     <input type="text" required placeholder="Yam and Egg"><button type="submit">Submit</button>
 </p>
-<p>Which do you thin I like the most
+<p>Which do you think I like the most
     <label for="Singing">
         <input id="Singing" value="Singing" type="radio" name="Singing-Listening to music">Singing
     </label>
